--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   ],
   "scripts": {
     "docs": "doctoc --title '**Table of content**' README.md",
+    "dev": "pnpm run -r dev",
     "clean": "pnpm run -r clean",
     "build": "pnpm run -r build",
     "test": "pnpm run -r test",
     "lint": "eslint --ext js,ts,tsx ."
   },
   "devDependencies": {
-    "@nighttrax/eslint-config-tsx": "~12.0.0-alpha.2",
+    "@nighttrax/eslint-config-tsx": "~11.0.0",
     "doctoc": "~2.2.0",
-    "eslint": "~8.57.0",
-    "eslint-plugin-import": "~2.29.0",
+    "eslint": "~8.31.0",
+    "eslint-plugin-import": "~2.26.0",
     "typescript": "~4.9.0"
   }
 }
